--- a/src/styles/master.css
+++ b/src/styles/master.css
@@ -17,7 +17,7 @@
 .header{ position:relative; width:100%;height:148px;background:#fff;border-bottom:1px solid #e5e5e5; z-index:4}
 .header110{position:relative; width:100%;height:118px;background:#fff;border-bottom:1px solid #e5e5e5;}
 .header108{position:relative; width:100%;height:118px;background:#fff;border-bottom:1px solid #e5e5e5;}
-.lz-logo{ float:left;width:300px; height:58px; background:url(../assets/images/logo.png) no-repeat; margin-top:32px;}
+.lz-logo{ float:left;width:420px; height:58px; background:url(../assets/images/logo.png) no-repeat; margin-top:32px;}
 .lz-search{ float:right; width:492px; height:44px; line-height:44px; margin-top:22px; }
 .functionbox{ float:left; width:492px; margin-bottom:2px;}
 .functionbox ul{ float:left; width:100%; display:inline-block;}
@@ -67,10 +67,14 @@ dl.view-items dd a:hover{ color:#7ea920}
 
 .header-news{ position:relative; width:100%; height:44px; line-height:44px; background:#fff; border-bottom:1px solid #ebebeb; overflow:hidden}
 .header-news-title{ float:left;font-size:14px; color:#000;font-weight:500}
-.txt-news{ position:relative; float:left;margin-left:10px;width:1000px; overflow:hidden;}
-/*ul.txt-news li{ float:left; margin-right:20px; display:inline;}*/
-.txt-news ul li a{color:#444;}
-.txt-news ul li a:hover{ color:#7ea920; text-decoration:underline}
+/*.txt-news{ position:relative; float:left;margin-left:10px;width:1000px; overflow:hidden;}*/
+/*!*ul.txt-news li{ float:left; margin-right:20px; display:inline;}*!*/
+/*.txt-news ul li a{color:#444;}*/
+/*.txt-news ul li a:hover{ color:#7ea920; text-decoration:underline}*/
+ul.txt-news{ position:relative; float:left;margin-left:10px;margin-top:12px;width:1000px; overflow:hidden;}
+ul.txt-news li{ float:left; margin-right:20px; display:inline;}
+ul.txt-news li a{color:#444;}
+ul.txt-news li a:hover{ color:#7ea920; text-decoration:underline}
 .more-blue{ float:right; color:#004f99}
 .more-blue:hover{ text-decoration:underline}
 
@@ -493,7 +497,7 @@ span.b-block{ font-size:18px; font-weight:500; margin-left:18px;}
 /*关于我们*/
 .aboutUs-banner{position:relative; width:100%; height:240px; background: #2ba3e1 url(../assets/images/aboutUs-bg.jpg) no-repeat center center;}
 .infoBox-txtcontent{ position:relative; float:left; width:922px; margin:20px 30px 10px 30px;}
-
+.friend-link-content a:hover{color:#036db8;}
 
 /*物流服务*/
 .logistics-banner{position:relative; width:100%; height:360px; background: #239cda url(../assets/images/logistics-banner.jpg) no-repeat center center;}
